--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ top: 120px;
 </head>
 <body>
 <div class="card">
-<h1>💘 yourname, will you be my Valentine? 💘</h1>
+<h1>💘 Yugzziii, will you be my Valentine? 💘</h1>
 <button class="yes" onclick="yesClick()">Yes ❤️</button>
 <button class="no" id="noBtn">No 😢</button>
 </div>
@@ -80,7 +80,7 @@ color:white;
 text-align:center;
 padding:20px;
 ">
-<h1>💖 Yayyy yourname! I knew it 😍💖</h1>
+<h1>💖 Yayyy babe! I knew it 😍💖</h1>
 <img
 src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
 alt="Dancing girl"
